# data-engineering

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
compose/: 1_init_s3_buckets.sh
compose/airflow/: Dockerfile  entrypoint.sh
compose/airflow/dags/: datawarehouse_dag.py
compose/localstack/: 01_init_s3_buckets.sh
compose/postgres/: 01_create_national_grid_demand_by_day_table.sql
compose/trino/: config.properties  jvm.config  node.properties
compose/trino/catalog/: hive.properties
notes/: sql.md
projects/airflow/: Dockerfile  README.md  entrypoint.sh  requirements.txt
projects/airflow/dags/: datawarehouse_dag.py  storage_dag.py
projects/airflow/operators/: at_least_once_dag_run_sensor.py  spark_docker_operator.py  trino_sql_operator.py
projects/batch-jobs/: Dockerfile  README.md  pyproject.toml
projects/batch-jobs/batch_jobs/datalake/: import_national_grid_demand.py  national_grid_demand.py
projects/batch-jobs/batch_jobs/datawarehouse/: national_grid_demand_by_day.py
projects/batch-jobs/batch_jobs/util/: args_parser.py  database.py  extractor.py  loader.py  loaders.py  spark_session_provider.py
projects/batch-jobs/db/trino/demand/: schema.sql  sync.sql  table.sql  use.sql
projects/batch-jobs/tests/datalake/: import_national_grid_demand_test.py  national_grid_demand_test.py
projects/batch-jobs/tests/datawarehouse/: national_grid_demand_by_day_test.py
projects/batch-jobs/tests/util/: args_parser_test.py  spark_session_provider_test.py
projects/hive-metastore/: Dockerfile  entrypoint.sh
(+1 files in other folders)
