[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "Data Engineering concepts, notes and examples"
authors = ["Bruno Gasparotto <bruno.m.gasparotto@gmail.com>"]
readme = "README.md"
packages = [{include = "data_engineering"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
